# bedown

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  bedown.spec  build_app.sh  netlify.toml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
landing/: index.html  thanks.html
src/bedown/: __init__.py  __main__.py  cli.py  gui.py  gui_main.py  runtime.py  scraper.py
