[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bedown"
version = "0.1.0"
description = "Download an entire Behance portfolio (images + metadata) with a single click."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Bedown contributors" }]
keywords = ["behance", "portfolio", "scraper", "designer", "download"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Environment :: MacOS X",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Multimedia :: Graphics",
]
dependencies = [
    "playwright>=1.40",
    "httpx>=0.27",
    "Pillow>=10.0",
    "tqdm>=4.66",
]

[project.optional-dependencies]
gui = ["customtkinter>=5.2"]
dev = [
    "pyinstaller>=6.5",
    "pyinstaller-hooks-contrib>=2024.0",
]

[project.scripts]
bedown = "bedown.cli:main"

[project.gui-scripts]
bedown-gui = "bedown.gui_main:main"

[project.urls]
Homepage = "https://github.com/abhishekaggy/bedown"
Issues = "https://github.com/abhishekaggy/bedown/issues"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
bedown = ["assets/*"]
